--- a/css/index.css
+++ b/css/index.css
@@ -130,10 +130,35 @@ table {
 * {
   box-sizing: border-box;
 }
+/*less mixins*/
+.dis-flex {
+  display: flex;
+}
+/*less variables*/
+/*code*/
 html,
 body {
   height: 100%;
 }
 html {
   font-size: 62.5%;
+}
+#container {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+header nav {
+  display: flex;
+  justify-content: flex-end;
+}
+header nav a {
+  font-size: 2.5rem;
+  margin-left: 3rem;
+  text-decoration: none;
+  color: black;
+}
+#top-section .img-container #programmer-img {
+  width: 10rem;
+  height: 10rem;
 }
