--- a/css/index.css
+++ b/css/index.css
@@ -144,9 +144,9 @@ html {
   font-size: 62.5%;
 }
 #container {
-  width: 90%;
+  width: 85%;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 header nav {
   display: flex;
@@ -158,7 +158,40 @@ header nav a {
   text-decoration: none;
   color: black;
 }
+#top-section {
+  background-color: #E9ECEF;
+  height: 89rem;
+  padding: 8rem 4rem 0 4rem;
+  margin-top: 4rem;
+}
+#top-section .img-container {
+  width: 100%;
+}
 #top-section .img-container #programmer-img {
-  width: 10rem;
-  height: 10rem;
+  width: 50%;
+  height: 37rem;
+}
+#top-section h1 {
+  font-size: 6.5rem;
+  margin-top: 1rem;
+}
+#top-section h3 {
+  font-size: 3rem;
+  margin-top: 1.5rem;
+}
+#top-section hr {
+  margin: 4rem 0;
+  color: #d1d4d7;
+}
+#top-section h2 {
+  font-size: 2.4rem;
+}
+#top-section button {
+  margin-top: 4rem;
+  width: 15.9rem;
+  height: 5rem;
+  color: white;
+  background-color: #808080;
+  font-size: 2rem;
+  font-weight: bold;
 }
